Bug 135078 - CRASH: Impress crashes if try start a slide show from current slide
Summary: CRASH: Impress crashes if try start a slide show from current slide
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.1.0.0.alpha0+
Hardware: All Windows (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.1.0
Keywords: bibisected, regression
Depends on:
Blocks: Skia
  Show dependency treegraph
 
Reported: 2020-07-23 14:46 UTC by Roman Kuznetsov
Modified: 2020-07-25 18:54 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Presentation file (535.43 KB, application/vnd.oasis.opendocument.presentation)
2020-07-23 14:46 UTC, Roman Kuznetsov
Details
Vs 2019 Call Stack, Start with first slide (8.79 KB, text/plain)
2020-07-23 19:14 UTC, Regina Henschel
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Roman Kuznetsov 2020-07-23 14:46:18 UTC
Description:
CRASH: Impress crashes if try start a slide show from current slide

Steps to Reproduce:
1. Open the file from attach
2. Select 22 slide
3. Select Start from Current Slide on toolbar
4. Crash!!!

Actual Results:
Impress crashes

Expected Results:
Impress works fine


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.1.0.0.alpha0+ (x64)
Build ID: 539e4124739feffdceecb5207fdc2428396a9dd4
CPU threads: 4; OS: Windows 10.0 Build 18363; UI render: Skia/Vulkan; VCL: win
Locale: ru-RU (ru_RU); UI: en-US
Calc: threaded

It works without Skia => a Skia problem
Comment 1 Roman Kuznetsov 2020-07-23 14:46:40 UTC
Created attachment 163453 [details]
Presentation file
Comment 2 Roman Kuznetsov 2020-07-23 14:48:24 UTC
Also LibreOffice is in tasks after crash and I should kill it before new start
Comment 3 Mike Kaganski 2020-07-23 15:08:50 UTC
Repro crash with Version: 7.1.0.0.alpha0+ (x64)
Build ID: 27c1a7fbcd3e236d4eee7ee3e1a7acdaa47510eb
CPU threads: 12; OS: Windows 10.0 Build 18363; UI render: Skia/Raster; VCL: win
Locale: ru-RU (ru_RU); UI: en-US
Calc: CL
Comment 4 Regina Henschel 2020-07-23 19:14:41 UTC
Created attachment 163459 [details]
Vs 2019 Call Stack, Start with first slide

It crashes already when start with first slide.
Tested with Version: 7.1.0.0.alpha0+ (x64)
Build ID: e3bf5b17bf4b8c8a7abb2c524d0f0da34295766c
CPU threads: 8; OS: Windows 10.0 Build 18362; UI render: Skia/Vulkan; VCL: win
Locale: de-DE (en_US); UI: en-US
Calc: CL
Comment 5 Regina Henschel 2020-07-23 19:20:23 UTC
Problem is the transition "Fade". This transition crashes already in the preview. There is no crash with e.g. transition "Wheel".
Comment 6 Mike Kaganski 2020-07-23 19:22:14 UTC
https://gerrit.libreoffice.org/c/core/+/99330
Comment 7 Regina Henschel 2020-07-23 19:24:22 UTC
I think, the problem is not related to Skia. It crashes too with Version: 7.1.0.0.alpha0+ (x64)
Build ID: e3bf5b17bf4b8c8a7abb2c524d0f0da34295766c
CPU threads: 8; OS: Windows 10.0 Build 18362; UI render: default; VCL: win
Locale: de-DE (en_US); UI: en-US
Calc: CL
Comment 8 Regina Henschel 2020-07-23 19:37:53 UTC
It does not crash with Version: 6.4.5.0.0+ (x64)
Build ID: 70a2071ce91b71326659e645dd97996262ea309a
CPU threads: 8; OS: Windows 10.0 Build 18362; UI render: default; VCL: win; 
Locale: de-DE (en_US); UI-Language: en-US
Calc: threaded

And it does not crash with Version: 7.0.0.2 (x64)
Build ID: c01aa64b6c3d89ebe5fe69c28c7adb24eb85249c
CPU threads: 8; OS: Windows 10.0 Build 18362; UI render: Skia/Raster; VCL: win
Locale: de-DE (en_US); UI: en-US
Calc: CL
Comment 9 Xisco Faulí 2020-07-23 19:55:21 UTC
Regression introduced in range https://cgit.freedesktop.org/libreoffice/core/log/?qt=range&q=e3adb51c54089a961cea1a33c5f54f6e552a4590..eccb763146325bd44a84b6a1698109ebd1bcf35e

Only skia related commit in the range seems to be 

https://cgit.freedesktop.org/libreoffice/core/commit/?id=fada69d6ee05700fd57c8844591562608a900a9d

author	Luboš Luňák <l.lunak@collabora.com>	2020-07-06 11:59:13 +0200
committer	Luboš Luňák <l.lunak@collabora.com>	2020-07-07 11:44:13 +0200
commit fada69d6ee05700fd57c8844591562608a900a9d (patch)
tree 3b193fb280f4d5c3adc53408ae8b4119bc83793b
parent ecb2dc9705d2197833cfbfd2259d3ac289f3e82d (diff)
set also RGB/BGR LCD order for Skia text rendering (tdf#134275)
Comment 10 Mike Kaganski 2020-07-23 20:02:37 UTC
https://git.libreoffice.org/core/+/87e5ee310959d535c53a083258edff1b3b1335bd is much more likely - see the patch mentioned in comment 6.
Comment 11 Roman Kuznetsov 2020-07-24 07:24:57 UTC
(In reply to Regina Henschel from comment #7)
> I think, the problem is not related to Skia. It crashes too with Version:
> 7.1.0.0.alpha0+ (x64)
> Build ID: e3bf5b17bf4b8c8a7abb2c524d0f0da34295766c
> CPU threads: 8; OS: Windows 10.0 Build 18362; UI render: default; VCL: win
> Locale: de-DE (en_US); UI: en-US
> Calc: CL

I can't repro it without Skia
Comment 12 Mike Kaganski 2020-07-24 08:07:17 UTC
Noel: could you please see comment 6 and comment 10. I suspect something from the "UNO constructors" change ... still strange (but I had not investigated too deep, I confess).
Comment 13 Xisco Faulí 2020-07-24 08:31:51 UTC
(In reply to Mike Kaganski from comment #10)
> https://git.libreoffice.org/core/+/87e5ee310959d535c53a083258edff1b3b1335bd
> is much more likely - see the patch mentioned in comment 6.

oh, thank makes sense too. A few weeks ago, I reported a similar issue in bug 134647
Comment 14 Commit Notification 2020-07-24 08:47:37 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/71654aed66ef425467118b69bc6d5879b4b0e717

tdf#135078: let vclcanvas::SpriteCanvas implement css::lang::XServiceInfo

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 15 Mike Kaganski 2020-07-24 08:48:48 UTC
The commit should fix the crash, and Luboš confirmed that it's a correct thing per se, but I don't know if this is the correct fix for the underlying issue (if any) - which is "why suddenly a long-existing code started to use a different object after changing used constructors".
Comment 16 Noel Grandin 2020-07-24 08:52:59 UTC
Mike's fix is the correct fix - the previous code returned a ServiceFactory object, which supplied the XServiceInfo interface.

The new code directly returns the underlying object, which is why it now has to implement that XServiceInfo interface itself.
Comment 17 Mike Kaganski 2020-07-24 09:47:10 UTC
(In reply to Noel Grandin from comment #16)

Thanks Noel!
FIXED then.
Comment 18 Roman Kuznetsov 2020-07-25 18:54:55 UTC
verified in

Version: 7.1.0.0.alpha0+ (x64)
Build ID: <buildversion>
CPU threads: 4; OS: Windows 10.0 Build 18363; UI render: Skia/Vulkan; VCL: win
Locale: ru-RU (ru_RU); UI: en-US
Calc: threaded

But fade transition effect is flickering now=(

Mike, any ideas?